--- a/style.css
+++ b/style.css
@@ -163,3 +163,30 @@ div.fadeIn {
         transform: translateY(0px);
     }
 }
+
+@media screen and (max-width: 768px) {
+    .score h2, .score p {
+        font-size: 1.9em;
+    }
+    .match h2 {
+        font-size: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .hands {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .match button {
+        width: 100px;
+    }
+    .intro h1 {
+        font-size: 25px;
+    }
+    img {
+        width: 200px;
+        height: 200px;
+    }
+}
